--- a/admin/.htaccess
+++ b/admin/.htaccess
@@ -1,4 +1,4 @@
-Order deny,allow
-Deny from All
-Allow from 67.236.124.230
-Allow from 162.1.179.245
+AuthType Basic
+AuthName "Admin"
+AuthUserFile .htpasswd
+Require valid-user
