--- a/admin/.htaccess
+++ b/admin/.htaccess
@@ -1,4 +1,4 @@
-AuthType Basic
-AuthName "Admin"
-AuthUserFile .htpasswd
-Require valid-user
+# AuthType Basic
+# AuthName "Admin"
+# AuthUserFile .htpasswd
+# Require valid-user
