--- a/fetch/.htaccess
+++ b/fetch/.htaccess
@@ -1,6 +1,6 @@
-Order deny,allow
-Deny from All
-Allow from 173.20.118.123
-Allow from 67.236.124.230
-Allow from 104.236.51.212
-Allow from 67.236.82.42
+#Order deny,allow
+#Deny from All
+#Allow from 173.20.118.123
+#Allow from 67.236.124.230
+#Allow from 104.236.51.212
+#Allow from 67.236.82.42
