--- a/paperroll/composer.json
+++ b/paperroll/composer.json
@@ -10,7 +10,8 @@
   "require": {
     "php": ">=5.3.0",
     "monolog/monolog": "~1.0",
-    "doctrine/orm": "2.4.*"
+    "doctrine/orm": "2.4.*",
+    "beberlei/DoctrineExtensions": "^1.0"
   },
   "autoload": {
     "psr-0": {
