--- a/assets/.htaccess
+++ b/assets/.htaccess
@@ -9,6 +9,7 @@ ExpiresByType image/x-icon "access 1 year"
 
 ExpiresByType text/css "access 1 month"
 ExpiresByType application/javascript "access plus 1 month"
+ExpiresByType text/html "access plus 0 seconds"
 ExpiresDefault "access 2 days"
 </IfModule>
 ## EXPIRES CACHING ##
