admin entry edit and create new, tag entry list and mass tagging

--- a/assets/.htaccess
+++ b/assets/.htaccess
@@ -15,6 +15,12 @@ ExpiresDefault "access 2 days"
 ## EXPIRES CACHING ##
 
 RewriteEngine On
+RewriteCond %{HTTP_HOST} spartacus\.drogers\.net$ [NC]
+RewriteRule ^[0-9]{4}/[0-9]{2}/(.*)$ http://spartacuswallpaper.com/$1 [R=301,L]
+
+RewriteCond %{HTTP_HOST} spartacus\.drogers\.net$ [NC]
+RewriteRule ^(.*)$ http://spartacuswallpaper.com/$1 [R=301,L]
+
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteRule ^([^?]*)$ /page/404.html [NC,L,QSA]
