update cache script, changelogs, migrate script

--- a/.gitignore
+++ b/.gitignore
@@ -2,13 +2,10 @@
 .idea/
 /admin/access.php
 /_site/
-/gallery
+/gallery/*
 /fetch/cache
 /fetch/index.sqlite
 /fetch/postpage.html
-/migrate/db.php
-/migrate/spartacus
-/spartacus
 *.log
 /var/
 
