--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,19 @@
 .DS_Store
 .idea/
-/access.php
-/_site/
-/gallery/*
-!/gallery/cache/.htaccess
-!/gallery/cache/cache.php
-/fetch/cache
-/fetch/index.sqlite
-/fetch/postpage.html
+access.php
+_site/
+gallery/*
+!gallery/cache/.htaccess
+!gallery/cache/cache.php
+!gallery/cache/placeholder.png
+!gallery/cache/placeholder.jpg
+fetch/cache
+fetch/index.sqlite
+fetch/postpage.html
 *.log
-/var/
+var/
 
-/composer.lock
-/vendor/
-/admin/phpliteadmin.php
+composer.lock
+vendor/
+admin/phpliteadmin.php
+assets/vsn/version.txt
